k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: 3t-app
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: dev126712/dockerized-three-tier-app-backend:d85e9675297521ee1646fcec0b553d0e2ec7f6b8
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: 3t-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
