k8s/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: database
  template:
    metadata:
      labels:
        tier: database
    spec:
      containers:
      - name: database
        image: dev126712/dockerized-three-tier-app-database:d85e9675297521ee1646fcec0b553d0e2ec7f6b8
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  selector:
    tier: database
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
